Stabilizing unit tests